--- a/json-api/package.json
+++ b/json-api/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "json-api",
-  "version": "1.0.0",
+  "name": "@base-ts/json-api",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch"
   },
+  "files": [
+    "lib"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
